// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change active tab 1`] = `
<div>
  <div
    class="tabs  mko_i63we-container"
  >
    <ul
      class="tabs__controls  mko_i63we-controls"
      role="tablist"
    >
      <li
        class="tab-control tab-control--active  mko_i63we-tabControl  mko_i63we-tabControl_active"
        role="tab"
      >
        <button
          class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard tab-control__button"
          type="button"
        >
          one
        </button>
      </li>
      <li
        class="tab-control  mko_i63we-tabControl"
        role="tab"
      >
        <button
          class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard tab-control__button"
          type="button"
        >
          two
        </button>
      </li>
    </ul>
    <div
      class="tabs__panels  mko_i63we-panels"
    >
      <div
        aria-hidden="false"
        class="tab-view tab-view--active  mko_i63we-view  mko_i63we-view_active"
        role="tabpanel"
      >
        <div>
          this is the first tab...
        </div>
      </div>
      <div
        aria-hidden="true"
        class="tab-view  mko_i63we-view"
        role="tabpanel"
      >
        <div>
          ...and this is another tab
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should change active tab 2`] = `
<div>
  <div
    class="tabs  mko_i63we-container"
  >
    <ul
      class="tabs__controls  mko_i63we-controls"
      role="tablist"
    >
      <li
        class="tab-control  mko_i63we-tabControl"
        role="tab"
      >
        <button
          class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard tab-control__button"
          type="button"
        >
          one
        </button>
      </li>
      <li
        class="tab-control tab-control--active  mko_i63we-tabControl  mko_i63we-tabControl_active"
        role="tab"
      >
        <button
          class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard tab-control__button"
          type="button"
        >
          two
        </button>
      </li>
    </ul>
    <div
      class="tabs__panels  mko_i63we-panels"
    >
      <div
        aria-hidden="true"
        class="tab-view  mko_i63we-view"
        role="tabpanel"
      >
        <div>
          this is the first tab...
        </div>
      </div>
      <div
        aria-hidden="false"
        class="tab-view tab-view--active  mko_i63we-view  mko_i63we-view_active"
        role="tabpanel"
      >
        <div>
          ...and this is another tab
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should pass isActive if child is function 1`] = `
<div>
  <div
    class="tabs  mko_i63we-container"
  >
    <ul
      class="tabs__controls  mko_i63we-controls"
      role="tablist"
    >
      <li
        class="tab-control  mko_i63we-tabControl"
        role="tab"
      >
        <button
          class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard tab-control__button"
          type="button"
        >
          one
        </button>
      </li>
      <li
        class="tab-control tab-control--active  mko_i63we-tabControl  mko_i63we-tabControl_active"
        role="tab"
      >
        <button
          class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard tab-control__button"
          type="button"
        >
          two
        </button>
      </li>
    </ul>
    <div
      class="tabs__panels  mko_i63we-panels"
    >
      <div
        aria-hidden="true"
        class="tab-view  mko_i63we-view"
        role="tabpanel"
      />
      <div
        aria-hidden="false"
        class="tab-view tab-view--active  mko_i63we-view  mko_i63we-view_active"
        role="tabpanel"
      >
        <div>
          ...and this is another tab
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render with minimum props 1`] = `
<div>
  <div
    class="tabs  mko_i63we-container"
  >
    <ul
      class="tabs__controls  mko_i63we-controls"
      role="tablist"
    >
      <li
        class="tab-control tab-control--active  mko_i63we-tabControl  mko_i63we-tabControl_active"
        role="tab"
      >
        <button
          class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard tab-control__button"
          type="button"
        >
          one
        </button>
      </li>
      <li
        class="tab-control  mko_i63we-tabControl"
        role="tab"
      >
        <button
          class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard tab-control__button"
          type="button"
        >
          two
        </button>
      </li>
    </ul>
    <div
      class="tabs__panels  mko_i63we-panels"
    >
      <div
        aria-hidden="false"
        class="tab-view tab-view--active  mko_i63we-view  mko_i63we-view_active"
        role="tabpanel"
      >
        <div>
          this is the first tab...
        </div>
      </div>
      <div
        aria-hidden="true"
        class="tab-view  mko_i63we-view"
        role="tabpanel"
      >
        <div>
          ...and this is another tab
        </div>
      </div>
    </div>
  </div>
</div>
`;
